Code wrap btn fix

--- a/style.css
+++ b/style.css
@@ -617,7 +617,7 @@ a:link{
     color: #1F1E1E;
     background-color: #EEEEED;
     padding: 0 18px;
-    margin: 20px 0px 10px;
+    margin: 20px 0px 20px;
     -webkit-transition: all 1.2s ease;
     transition: all 1.2s ease;
 }
